- Added support for abbreviation and offset based timezone specifiers for   DateTime::getOffset() and DateTime::getName(). - Fixed bug #43527 (DateTime created from a timestamp reports environment   timezone). - Fixed bug #42190 (Constructing DateTime with TimeZone Indicator invalidates   DateTimeZone).